fixing update form inpur visibility v1.1.1.1

--- a/assets/css/inventory.css
+++ b/assets/css/inventory.css
@@ -250,8 +250,8 @@ tr:hover {
   border-radius: 8px;
   border: none;
   font-size: 1em;
-  background-color: white;
-  color: black;
+  background-color: black;
+  color: white;
   box-sizing: border-box;
   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
 }
